--- a/Frontend/src/Components/LayoutArea/Menu/Menu.css
+++ b/Frontend/src/Components/LayoutArea/Menu/Menu.css
@@ -10,7 +10,7 @@
 }
 
 .Menu .active {
-    color: #000 ;
+    color: red ;
     font-weight: bold;
     font-family: 'Courier New', Courier, monospace;
     font-style: italic;
