--- a/Frontend/src/Components/UserArea/UserMenu/UserMenu.css
+++ b/Frontend/src/Components/UserArea/UserMenu/UserMenu.css
@@ -1,5 +1,7 @@
 .UserMenu {
 	position: fixed;
-    top: 20px;
-    right: 20px;
+    top: 30px;
+    right: 70px;
+    font-size: medium;
+    color: #a81818;
 }
