--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,33 +1,36 @@
-html, body, #root {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    text-align: center;
-    background-image: linear-gradient(lightblue, #8da1e4);
+html,
+body,
+#root {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  text-align: center;
+  background-image: linear-gradient(lightblue, #8da1e4);
 }
 
 a {
-    color: blue;
+  color: blue;
 }
 
 form {
-    width: 300px;
-    margin: 10px auto;
-    padding: 10px;
-    border-radius: 15px;
-    background-color: #e0bfcd;
-    box-shadow: 10px 10px 10px gray;
-    border: 3px solid black;
-    text-align: right;
-    color: #6a57bd;
-    font-size: medium;
-    font-weight: 10;
+  width: 300px;
+  margin: 10px auto;
+  padding: 10px;
+  border-radius: 15px;
+  background-color: #e0bfcd;
+  box-shadow: 10px 10px 10px gray;
+  border: 3px solid black;
+  text-align: right;
+  color: #6a57bd;
+  font-size: medium;
+  font-weight: 10;
 }
 
-form > input, form > button {
-    width: 100%;
-    margin-bottom: 20px;
-    box-sizing: border-box;
-    height: 30px;
-    background-color: blanchedalmond;
+form > input,
+form > button {
+  width: 100%;
+  margin-bottom: 20px;
+  box-sizing: border-box;
+  height: 30px;
+  background-color: blanchedalmond;
 }
