--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -27,7 +27,8 @@ form {
 }
 
 form > input,
-form > button {
+form > button,
+form > textarea {
   width: 100%;
   margin-bottom: 20px;
   box-sizing: border-box;
