--- a/Frontend/src/Components/DestinationArea/DestinationCard/DestinationCard.css
+++ b/Frontend/src/Components/DestinationArea/DestinationCard/DestinationCard.css
@@ -1,22 +1,22 @@
 
 .DestinationCard {
-  width: 32%;
+  width: 250px;
   display: inline-block;
   text-align: left;
   background-image: linear-gradient(90deg, lavender, white);
-  margin: 5px;
+  margin-left : 30px;
+  margin-top: 10px;
   padding: 3px;
   border: 1px solid;
-  border-radius: 10px;
-  box-shadow: 5px 5px 10px;
-  height: 380px;
+  border-radius: 5px;
+
   box-sizing: border-box;
   vertical-align: top;
 }
 
 .DestinationCard img {
-  width: 60%;
-  height: auto;
+  width: auto;
+  height: 110px;
   max-height: 80%;
   border: 2px solid;
   border-radius: 10px;
@@ -36,7 +36,7 @@
 .information {
   text-align: center;
   font-size: small;
-  padding: px;
+  padding: 3px;
   font-family: Cambria;
 }
 
@@ -51,4 +51,24 @@
 }
 .dates {
   padding:0.1px; /* Adjust the values to control the margin */
+}
+
+.destinationDescription {
+   height: 90px; 
+}
+
+.information .Button {
+    padding: 1px 2px 1px 2px;
+    margin: 2px 5px 2px 5px;
+    border-radius: 0.5rem; 
+    font-size: 0.875rem;
+    line-height: 1.0rem; 
+    font-weight: 500; 
+    color: #ffffff; 
+    text-decoration: none;
+    background-color: #1D4ED8;
+}
+
+.Cursor {
+ cursor: pointer;
 }
