--- a/Frontend/src/Components/AdminArea/AddDestination/AddDestination.css
+++ b/Frontend/src/Components/AdminArea/AddDestination/AddDestination.css
@@ -1,5 +1,4 @@
- .AddDestination form {
-    background-color: white;
-     display: 'flex'
-} 
-
+.AddDestination form {
+  background-color: white;
+  display: 'flex';
+}
