--- a/Frontend/src/Components/DestinationArea/DestinationCard/DestinationCard.css
+++ b/Frontend/src/Components/DestinationArea/DestinationCard/DestinationCard.css
@@ -1,10 +1,9 @@
-
 .DestinationCard {
   width: 250px;
   display: inline-block;
   text-align: left;
   background-image: linear-gradient(90deg, lavender, white);
-  margin-left : 30px;
+  margin-left: 30px;
   margin-top: 10px;
   padding: 3px;
   border: 1px solid;
@@ -50,25 +49,25 @@
   margin-bottom: 3px; /* Add some space below the destination name */
 }
 .dates {
-  padding:0.1px; /* Adjust the values to control the margin */
+  padding: 0.1px; /* Adjust the values to control the margin */
 }
 
 .destinationDescription {
-   height: 90px; 
+  height: 90px;
 }
 
 .information .Button {
-    padding: 1px 2px 1px 2px;
-    margin: 2px 5px 2px 5px;
-    border-radius: 0.5rem; 
-    font-size: 0.875rem;
-    line-height: 1.0rem; 
-    font-weight: 500; 
-    color: #ffffff; 
-    text-decoration: none;
-    background-color: #1D4ED8;
+  padding: 1px 2px 1px 2px;
+  margin: 2px 5px 2px 5px;
+  border-radius: 0.5rem;
+  font-size: 0.875rem;
+  line-height: 1rem;
+  font-weight: 500;
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #1d4ed8;
 }
 
 .Cursor {
- cursor: pointer;
+  cursor: pointer;
 }
