--- a/Frontend/src/Components/LayoutArea/Layout/Layout.css
+++ b/Frontend/src/Components/LayoutArea/Layout/Layout.css
@@ -1,19 +1,21 @@
 .Layout {
-	height: 100%;
-    box-sizing: border-box;
-    display: grid;
-    grid-template-rows: 10% 85% 5%;
-    grid-template-columns: 15% 85%;
+  height: 100%;
+  box-sizing: border-box;
+  display: grid;
+  grid-template-rows: 10% 85% 5%;
+  grid-template-columns: 15% 85%;
 }
 
-header, footer {
-    grid-column: span 2;
+header,
+footer {
+  grid-column: span 2;
 }
 
 main {
-    overflow: auto;
+  overflow: auto;
 }
 
-.Layout, .Layout > * {
-    border: 1px solid lightseagreen;
+.Layout,
+.Layout > * {
+  border: 1px solid lightseagreen;
 }
