--- a/Frontend/src/Components/LayoutArea/Header/Header.css
+++ b/Frontend/src/Components/LayoutArea/Header/Header.css
@@ -1,9 +1,11 @@
 .Header {
-  height: 100%;
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  font-size: 2.3vh;
+  min-height: 150px;
+  font-size: 1.5vh;
+  display: flex;
   font-style: italic;
   color: blue;
+  width: 100%;
+  justify-content: space-between;
+  padding: 20px 40px;
+  max-width: 768px;
 }
