--- a/Frontend/src/Components/LayoutArea/Menu/Menu.css
+++ b/Frontend/src/Components/LayoutArea/Menu/Menu.css
@@ -4,8 +4,7 @@
   padding-top: 70px;
   gap: 30px;
   color: #1a17b0;
-  font-size: xx-large;
-  font-size: medium;
+  font-size: x-large;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
