--- a/Frontend/src/Components/DestinationArea/DestinationList/DestinationList.css
+++ b/Frontend/src/Components/DestinationArea/DestinationList/DestinationList.css
@@ -17,9 +17,14 @@
 }
 
 .DestinationListContainer .pagination {
-  background-color: beige;
+  background-color: red;
   padding: 5px;
-  margin-top: 5px;
+  margin-top: 22px;
+  margin-right: 500px;
+  width: 500px;
+  border: 1px solid;
+  border-radius: 5px;
+ 
 }
 
 .DestinationListContainer .Button {
@@ -33,3 +38,4 @@
   text-decoration: none;
   background-color: #1d4ed8;
 }
+
