--- a/Frontend/src/Components/DestinationArea/DestinationCard/DestinationCard.css
+++ b/Frontend/src/Components/DestinationArea/DestinationCard/DestinationCard.css
@@ -2,7 +2,7 @@
   width: 250px;
   display: inline-block;
   text-align: left;
-  background-image: linear-gradient(90deg, lavender, white);
+  background-image: linear-gradient(90deg, green, white);
   margin-left: 30px;
   margin-top: 10px;
   padding: 3px;
