--- a/Frontend/src/Components/DestinationArea/DestinationList/DestinationList.css
+++ b/Frontend/src/Components/DestinationArea/DestinationList/DestinationList.css
@@ -1,12 +1,7 @@
-.DestinationListContainer .pagination {
-  margin: 10 auto;
-  display: flex;
-  justify-content: space-evenly;
-}
-
 .DestinationListContainer .filter {
   display: block;
   font-style: italic;
+  color: blanchedalmond;
 }
 
 .DestinationListContainer .admin-links {
@@ -27,6 +22,7 @@
   border: 1px solid;
   border-radius: 5px;
   position: relative;
+  /* justify-content: space-evenly; */
 }
 
 .DestinationListContainer .Button {
