--- a/Frontend/src/Components/AdminArea/DestinationsReport/DestinationsReport.css
+++ b/Frontend/src/Components/AdminArea/DestinationsReport/DestinationsReport.css
@@ -1,3 +1,13 @@
-.DestinationsReport {
-	
+/* ChartStyles.css */
+.chart-title {
+  color: red;
+  font-size: 24px;
+  font-weight: bold;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.chart-legend-labels,
+.chart-axis-labels {
+  color: red;
 }
