--- a/Frontend/src/Components/LayoutArea/Header/Header.css
+++ b/Frontend/src/Components/LayoutArea/Header/Header.css
@@ -2,11 +2,12 @@
   display: flex;
   justify-content: space-between; /* Aligns the UserMenu components to the sides */
   align-items: center; /* Centers items vertically */
-  padding-right: 200px;
+  padding-right: 100px;
   padding-left: 200px;
   background-color: #f0f0f0; /* Example background color, adjust as needed */
-  color: blue;
-  background-color: azure;
+  color: #acc235;
+  background-color: #2563eb;
+  font-family: 'Inter', sans-serif;
 }
 
 .Header h1 {
@@ -14,4 +15,5 @@
   text-align: center; /* Centers the text */
   font-size: 2.5em; /* Adjusts font size */
   flex-grow: 1; /* Allows the title to take up the remaining space between the menus */
+  font-family: 'Inter', sans-serif;
 }
