--- a/Frontend/src/Components/LayoutArea/Menu/Menu.css
+++ b/Frontend/src/Components/LayoutArea/Menu/Menu.css
@@ -9,7 +9,7 @@
 }
 
 .Menu .active {
-  color: red;
+  color: white;
   font-weight: bold;
   font-family: 'Courier New', Courier, monospace;
   font-style: italic;
