--- a/Frontend/src/Components/LayoutArea/Menu/Menu.css
+++ b/Frontend/src/Components/LayoutArea/Menu/Menu.css
@@ -5,12 +5,12 @@
   gap: 30px;
   color: #1a17b0;
   font-size: x-large;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 .Menu .active {
   color: white;
   font-weight: bold;
   font-family: 'Courier New', Courier, monospace;
-  font-style: italic;
+  font-family: 'Inter', sans-serif;
 }
