--- a/Frontend/src/Components/HomeArea/Home/Home.css
+++ b/Frontend/src/Components/HomeArea/Home/Home.css
@@ -1,8 +1,8 @@
 .Home {
   text-align: center;
-  padding: 20px;
+  padding: 10px;
   color: white;
-  font-size: x-large;
+  font-size: large;
   position: relative;
   font-family: 'Inter', sans-serif;
 }
@@ -15,7 +15,7 @@
 .fixed-image {
   width: 300px; /* Adjust size as needed */
   position: absolute; /* Position the image as desired */
-  top: 280px; /* Adjust top position */
+  top: 230px; /* Adjust top position */
   left: 70%; /* Center the image horizontally */
   transform: translateX(-50%); /* Center correction */
   border-radius: 20px;
